[tool.poetry]
name = "turlog-toolbox"
version = "0.1.0"
description = "Various useful tools accumulated over the years."
authors = ["Łukasz Zosiak <lukasz.zosiak@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "turlog", from="src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
