[tool.poetry]
name = "turlog-toolbox"
version = "0.1.0"
description = "Various useful tools accumulated over the years."
authors = ["Łukasz Zosiak <lukasz.zosiak@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "turlog", from="src"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.8"
pydantic = "^2.10.4"


[tool.poetry.group.backup.dependencies]
rclone-python = {version = "^0.1.18", extras = ["backup"]}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"